# nexus-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
docs/: getting-started.md
docs/guides/: configuration.md  controllers-and-routes.md  dependency-injection.md  error-handling.md  guards.md  scheduled-jobs.md
docs/reference/: macros.md
nexus_framework/: Cargo.toml
nexus_framework/src/: config.rs  container.rs  diagnostics.rs  error.rs  extractors.rs  factory.rs  guard.rs  handlers.rs  lib.rs  middleware.rs  prelude.rs  tracing.rs
nexus_framework/tests/: unit_tests.rs
nexus_framework_macros/: Cargo.toml
nexus_framework_macros/src/: app.rs  controller.rs  lib.rs  model.rs  parsers.rs  service.rs
